# dune-dynasty-vc

./: BUILD_VC.txt  CMakeLists.txt
src/audio/: audio_a5.cpp
src/os/: strings.h
src/video/: video_a5.c
